[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyconus_2024_talk"
version = "0.0.0"
description = 'Code for PyConUS 2024 talk'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Junya Fukuda", email = "junya.fukuda.e@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "trio",
  "trio-util",
  "trio-websocket",
  "websockets"
]
